# Offline-Positioning-in-Tunnels

./: .gitignore  README.md
Matlab/: basicProjection.m  coba.m  coba3.m  coba4.m  exportPointCloud.m  linearInterpolation.m  pcd_to_mat.m  raysBuild.m
Matlab/solution/: computeErrors.m  computeIntersection.m  computeReprojection2Dto3D.m  computeTransformCamera2World.m  computeTransformPixel2Camera.m  computeTransformWorld2Camera.m  drawImagePlane.m  drawRays.m  main.m  projectRays.m
Matlab/solution/lasdata/: lasdata.m
Matlab/solution/plotting log/: drawPose.m  processLog.m  readLog.m  readPCD.m
Matlab/solution/plotting log/log-may-26-med/: 433-poseFile.txt  433-poseRefined.txt  434-poseFile.txt  434-poseRefined.txt  435-poseFile.txt  435-poseRefined.txt  436-poseFile.txt  436-poseRefined.txt  437-poseFile.txt  437-poseRefined.txt  438-poseFile.txt  438-poseRefined.txt  439-poseFile.txt  439-poseRefined.txt  440-poseFile.txt  440-poseRefined.txt  441-poseFile.txt  441-poseRefined.txt  442-poseFile.txt  442-poseRefined.txt  443-poseFile.txt  443-poseRefined.txt  444-poseFile.txt  444-poseRefined.txt  445-poseFile.txt  445-poseRefined.txt  446-poseFile.txt  446-poseRefined.txt  447-poseFile.txt  447-poseRefined.txt  448-poseFile.txt  448-poseRefined.txt  449-poseFile.txt  449-poseRefined.txt  450-poseFile.txt  450-poseRefined.txt  451-poseFile.txt  451-poseRefined.txt  452-poseFile.txt  452-poseRefined.txt  (+101 more)
Matlab/solution/process gps/: plotMap.m
Matlab/thesis/camera_data/: backprojectedPts.mat  cameraPoses.mat  cameraPosition.mat  filteredCloudS.mat
Matlab/thesis/groundtruth/: downsampled_gps.mat  exec.m  manual_lane_marking.m  prepare_reference.m
Matlab/tools/: delaunayTria.m  findCameraPose.m  getXYZpointCloud.m  pcd_to_mat.m  ply_to_pcd.m  visualisePointCloud.m
OPiT/: .clang_complete  .gitignore  BundleAdjust.cpp  BundleAdjust.h  CMakeLists.txt  Calibration.cpp  Calibration.h  Common.cpp  Common.h  Converter.cpp  Converter.h  FeatureDetection.cpp  FeatureDetection.h  Frame.cpp  Frame.h  Main.cpp  MainWrapper.cpp  ManualCorrespondences.cpp  ManualCorrespondences.h  ManualCorrespondences.txt  ManualCorrespondences.yml  PCL1.8.0.props  PCLCloudSearch.cpp  PCLCloudSearch.h  PCLTest.cpp  PCLTest.h  PnPSolver.cpp  PnPSolver.h  PointProjection.h  Reprojection.cpp  Reprojection.h  SIFTdetector.cpp  SIFTdetector.h  Triangulation.cpp  Triangulation.h  VisualOdometry.cpp  VisualOdometry.h  pclWrapper.cpp  pclWrapper.h
OPiT/buildunix/: CMakeCache.txt  Makefile  OPiT  cmake_install.cmake
OPiT2/: .clang_complete  .gitignore  CMakeLists.txt
OPiT2/exec/: CMakeLists.txt  Main.cpp
OPiT2/gnuplot/: logFile.gp  logFile.txt
OPiT2/gnuplot/log/: 433-poseFile.txt  433-poseRefined.txt  434-poseFile.txt  434-poseRefined.txt  435-poseFile.txt  435-poseRefined.txt  436-poseFile.txt  436-poseRefined.txt  437-poseFile.txt  437-poseRefined.txt  438-poseFile.txt  438-poseRefined.txt  439-poseFile.txt  439-poseRefined.txt  440-poseFile.txt  440-poseRefined.txt  441-poseFile.txt  441-poseRefined.txt  442-poseFile.txt  442-poseRefined.txt  443-poseFile.txt  443-poseRefined.txt  444-poseFile.txt  444-poseRefined.txt  445-poseFile.txt  445-poseRefined.txt  446-poseFile.txt  446-poseRefined.txt  447-poseFile.txt  447-poseRefined.txt  448-poseFile.txt  448-poseRefined.txt  449-poseFile.txt  449-poseRefined.txt  450-poseFile.txt  450-poseRefined.txt  451-poseFile.txt  451-poseRefined.txt  452-poseFile.txt  452-poseRefined.txt  (+42 more)
OPiT2/shared/: CMakeLists.txt
OPiT2/shared/header/: BundleAdjust.h  Calibration.h  Common.h  Converter.h  FeatureDetection.h  Frame.h  Log.h  MainWrapper.h  PCLCloudSearch.h  PnPSolver.h  PointProjection.h  Reprojection.h  Triangulation.h  VisualOdometry.h
OPiT2/shared/source/: BundleAdjust.cpp  Calibration.cpp  Common.cpp  Converter.cpp  FeatureDetection.cpp  Frame.cpp  Log.cpp  MainWrapper.cpp  ManualCorrespondences.cpp  PCLCloudSearch.cpp  PnPSolver.cpp  PointProjection.cpp  Reprojection.cpp  Triangulation.cpp  VisualOdometry.cpp
OPiT2/tests/: CMakeLists.txt  Test.cpp
OPiT2/tests-features/: CMakeLists.txt  Test-features.cpp
OPiT2/tests-pcl/: CMakeLists.txt  Test-pcl.cpp
OPiT2/tests-sba/: CMakeLists.txt  Test-bundle.cpp
OPiT2/tests-simulation/: CMakeLists.txt  Test-simulation.cpp
OPiT2/tests-vo/: CMakeLists.txt  Test-vo.cpp
